Ghiro-0.2 (xx/xx/xxxx)

 * Added case deletion.

Ghiro-0.1 (10/02/2013)

 * Initial release.