@@ -24,6 +24,11 @@
                                 <a class="btn tool" title="Show analysis" href="{% url "analyses.views.show_analysis" image.id %}">
                                     <i class="icon-list-alt"> </i>
                                 </a>
+                                {% if image.favorites.all %}
+                                    <a href="#" id="{% url "analyses.views.favorite" image.id %}" title="Favorite" rel="{{ image.id }}" class="btn tool favorite btn-warning star{{image.id}}"> <i class="icon-star"> </i></a>
+                                {% else %}
+                                    <a href="#" id="{% url "analyses.views.favorite" image.id %}" title="Favorite" rel="{{ image.id }}" class="btn tool favorite star{{image.id}}"> <i class="icon-star"> </i></a>
+                                {% endif %}
                             </div>
                         </td>
                     </tr>
