@@ -1,6 +1,7 @@
 Ghiro-0.2 (xx/xx/xxxx)
 
  * Added case deletion.
+ * Added favorited images.
 
 Ghiro-0.1 (10/02/2013)
 
